Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@789 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -7,6 +7,10 @@
   * [BuildSystem Building and Testing OpenMalaria]
   * [HtmlDocumentation doxygen-generated documentation]
 
+===Build===
+  
+  * [Precompiled Binaries]
+
 ===Model components===
 
   * [ModelTransmission Transmission models]
