Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@796 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Binaries.wiki
+++ b/wiki/Binaries.wiki
@@ -6,8 +6,8 @@ It's now possible to checkout Precompiled Binaries from the openmalaria reposito
 
 = Details =
   * _*Windows:*_
-  svn checkout 'http://openmalaria.googlecode.com/svn/download/windows_build_784/'
+  svn checkout http://openmalaria.googlecode.com/svn/download/windows_build_784/
   * _*MACOSX:*_
-  svn checkout 'http://openmalaria.googlecode.com/svn/download/apple_build_784/'
+  svn checkout http://openmalaria.googlecode.com/svn/download/apple_build_784/
   * _*LINUX(X86):*_
-  svn checkout 'http://openmalaria.googlecode.com/svn/download/linux_build_784/'
+  svn checkout http://openmalaria.googlecode.com/svn/download/linux_build_784/
