Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@809 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Binaries.wiki
+++ b/wiki/Binaries.wiki
@@ -6,6 +6,8 @@ It's now possible to download Precompiled Binaries from the openmalaria reposito
 
 = Details =
   * _*Windows:*_
+  _You will need to have windows visual studio or visual express installed._
+
   http://openmalaria.googlecode.com/svn/download/win32/
   * _*MACOSX:*_
   http://openmalaria.googlecode.com/svn/download/macosx/
