Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@812 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -4,6 +4,9 @@
 
   * [http://code.google.com/p/openmalaria/source/checkout svn repository]
   * [http://github.com/dhardy/openmalaria git repository]
+
+===Installing===
+  * [SetupOverview Overview]
   * [BuildSystem Building and Testing OpenMalaria]
   * [HtmlDocumentation doxygen-generated documentation]
 
