Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@814 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/SetupOverview.wiki
+++ b/wiki/SetupOverview.wiki
@@ -4,4 +4,4 @@
 
 Interested in the openmalaria project? Assuming you want to do more than join the volunteer computing effort (at [http://www.malariacontrol.net]), there's two options:
   * install the [Binaries pre-compiled executables] -- recommended for users
-  * build from source -- for programmers developing openmalaria
+  * [BuildSystem build from source] -- for programmers developing openmalaria
