Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@823 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -8,7 +8,7 @@
 
 ===Installing===
 
-  * [SetupOverview Overview]
+  * [SetupOverview Getting started]
   * [Binaries Precompiled Binaries]
   * [BuildSystem Building and Testing OpenMalaria]
 
