--- a/wiki/Binaries.wiki
+++ b/wiki/Binaries.wiki
@@ -9,9 +9,15 @@ Start by making a folder wherever you want to use OpenMalaria. Then, you need to
   * everything in common or common.zip (they contain the same files; probably downloading the zip file and extracting it is easier than downloading each file)
   * the binary (executable & libraries) for your system (win32/macosx/linux32): download everything from whichever folder is relevant
 
-Make sure all the files (except examples) end up in the same directory: openMalaria, schema_17.xsd, etc. Now you should be able to (double) click on the runOpenMalaria.bat/.sh file and openmalaria should run.
+Make sure all the files (except examples) end up in the same directory: openMalaria, schema_17.xsd, etc. Now you should be able to (double) click on the runOpenMalaria.bat/.sh file and openmalaria should run. If not...
+
+== Errors ==
 
 Note that, for windows, you may well have to install the .net framework (if trying to run openMalaria as above gives you an error message like "reinstall the application", try this). The most straightforward way of getting this seems to be to search for .net, go to the microsoft link, and click download.
+
+If this doesn't help, please contact us (or better, open an "issue" (see issues tab at the top of this page)) with the error message. There's quite a few possible reasons it won't work and these binaries aren't well tested, so you'd help us out!
+
+== What's what (files) ==
 
 Now it works, I should tell you what all the files are:
 
