--- a/wiki/WindowsBuildOpenMalaria.wiki
+++ b/wiki/WindowsBuildOpenMalaria.wiki
@@ -57,6 +57,7 @@ TODO: Add XERCES_STATIC_LIBRARY to openMalaria compile targets.
 In the cmake configuration for OpenMalaria:
  * set OM_USE_LIBCMT to true
  * edit {{{CMAKE_CXX_FLAGS_*}}} (whichever build mode you're interested in): change "/MD" to "/MT" (or "/MDd" to "/MTd")
+ * edit {{{CMAKE_CXX_FLAGS}}}: add "/D XERCES_STATIC_LIBRARY"
 
 = Running Simulations =
 
