Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@832 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/WindowsBuildOpenMalaria.wiki
+++ b/wiki/WindowsBuildOpenMalaria.wiki
@@ -52,6 +52,10 @@ If on Visual Studio 2005 (and maybe others), when inside VS5, open the Propertie
 = Compiling without a .net dependency and with Xerces statically linked =
 (Ignore this section unless you *know* you want to do this. It's mostly notes to make a BOINC release version with minimal dependencies.)
 
+Please remember that you have to use the xerces static library, which is not given precompiled in the xsd install. 
+
+Further explanations in chapter [Dependencies]. 
+
 TODO: Add XERCES_STATIC_LIBRARY to openMalaria compile targets.
 
 In the cmake configuration for OpenMalaria:
