--- a/wiki/SetupOverview.wiki
+++ b/wiki/SetupOverview.wiki
@@ -20,11 +20,11 @@ If you open wherever you put the openmalaria binary in a file browser, in theory
   * It always uses the "scenario.xml" input file
   * Output always goes to the same file (output.txt or output.txt.gz); if this file already exists it won't run
 
-To get around this, you can run openmalaria from a command-line (if you're familiar with command-prompts), or you can use a script file (.bat on windows, .sh on mac/linux). On windows, using a bat file is definitely the easiest; it also works on the mac, except that the usual text editors don't seem to want to edit the script (try installing something else?).
+To get around this, you can run openmalaria from a command-line (if you're familiar with command-prompts), or you can use a script file (.bat on windows, .sh on mac/linux). On windows, using a bat file is definitely the easiest; on the mac (and linux) it doesn't actually appear to work.
 
 == Script files ==
 
-(Double) clicking on the included runOpenMalaria.sh/.bat script file should do the job. This should look like:
+(Double) clicking on the included runOpenMalaria.sh/.bat script file should do the job. This script should look like:
 
 (windows batch (.bat) version)
 {{{
@@ -68,11 +68,14 @@ Printed help; exiting...
 }}}
 (Probably the --scenario option is the only one you'll want to use.)
 
-Using a command line:
+== Command line ==
+
+The above commands are relevant for command-lines too (the script files are, in fact, just a list of commands used by the shell/command prompt). In order to run open malaria, you can do:
+
  # Open a terminal (iterm, command-prompt, konsole, etc.)
  # Enter the ls/dir command (and press _return_) to see what's in the current directory
  # Use `cd DIRECTORY` to change to another directory (note: the special name .. (`cd ..`) is used to go up to the parent directory)
  # Shortcuts: you can drag files/folders from a file browser onto the command-line to enter their names. You can press _tab_ to complete file names after typing the first few letters.
- # When in the right directory, use what commands you need. E.g. `./openmalaria --help`
+ # When in the right directory, use what commands you need; for example: `./openmalaria --scenario scenario.xml`
 
 *Note*: I'm sure this guide is a little incomplete, since it tries to cover quite a lot in a minimal fashion. If you can't get things to work, please contact one of us!
