--- a/wiki/Binaries.wiki
+++ b/wiki/Binaries.wiki
@@ -4,12 +4,11 @@ Precompiled Binaries for windows, macosx and linux.
 
 It's now possible to download Precompiled Binaries from the openmalaria repository.
 
-Start by making a folder wherever you want to use OpenMalaria. Then, you need to download, from [http://openmalaria.googlecode.com/svn/download/r784]:
-
-  * everything in common or common.zip (they contain the same files; probably downloading the zip file and extracting it is easier than downloading each file)
-  * the binary (executable & libraries) for your system (win32/macosx/linux32): download everything from whichever folder is relevant
-
-Make sure all the files (except examples) end up in the same directory: openMalaria, schema_17.xsd, etc. Now you should be able to (double) click on the runOpenMalaria.bat/.sh file and openmalaria should run. If not...
+Start by making a folder wherever you want to use OpenMalaria. Then, you need to download one of the archives here: [http://openmalaria.googlecode.com/svn/download/r784]
+ * win32.zip
+ * macosx.tar.bz2
+ * linux32.tar.bz2
+Extract whichever you download into your openmalaria folder. On windows, you should be able to (double) click on the runOpenMalaria.bat file to test the program will run (if not, see below). On other platforms, this doesn't appear to work (see see [SetupOverview Getting Started]).
 
 == Errors ==
 
