--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -1,3 +1,5 @@
 = OpenMalaria =
 
 Welcome to the OpenMalaria wiki on google-code. Here we have some information on the project's code and a little on the mathematical models used in the code.
+
+Contact via [http://groups.google.com/group/openmalaria openmalaria] google group.
