Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@895 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/HtmlDocumentation.wiki
+++ b/wiki/HtmlDocumentation.wiki
@@ -2,6 +2,6 @@
 
 = Documentation =
 
-The OpenMalaria code is, to a large extent, documented with Doxygen-style comments. The html documentation generated daily from the latest code committed here can be found below:
+The openmalaria code is, to a large extent, documented with [http://www.doxygen.org/ Doxygen]-style comments. The html documentation generated daily from the latest code committed here can be found below:
 
 http://www.malariacontrol.net/openmalaria/html/
