--- a/wiki/HtmlDocumentation.wiki
+++ b/wiki/HtmlDocumentation.wiki
@@ -2,6 +2,6 @@
 
 = Documentation =
 
-The openmalaria code is, to a large extent, documented with [http://www.doxygen.org/ Doxygen]-style comments. The html documentation generated daily from the latest code committed here can be found below:
+The openmalaria code is, to a large extent, documented with [http://www.doxygen.org/ Doxygen]-style comments. (This is used to autonomously generate html documentation of various interfaces in the code, largely aimed at software developers.) The latest build of this documentation (generated daily) is at:
 
 http://www.malariacontrol.net/openmalaria/html/
