--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -14,13 +14,13 @@ There are two envisaged methods of using the simulator:
 
 
 == Development ==
-=== Models ===
+=== [Models] ===
 
 The model as a whole consists of many components, from transmission to within-host parasite dynamics to drug action.
 
 For an overview of the model-components represented, see (TODO). For a list of papers describing some part of the model, see (TODO).
 
-=== Code ===
+=== [Code] ===
 
 The openmalaria project now has a [https://www.ohloh.net/p/openmalaria considerable code base]. The core program is now entirely written in C++, having Fortran roots. TODO: an overview of the code.
 
