--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -2,7 +2,9 @@
 
 ===OpenMalaria===
   * [Start Introduction]
-  * [SetupOverview Installing]
+  * [SetupOverview Getting started (local simulations)]
+  * [XmlScenario Inputs: creating a scenario]
+  * [OutputFiles Outputs: interpreting results]
 
 ===Code===
   * [Code#Source_code Source]
@@ -17,8 +19,3 @@
   * [ModelDrug Drug (PKPD) action & resistance models]
 
   * [Interventions List of interventions]
-
-
-===Model inputs and outputs===
-  * [XmlScenario scenario.xml input file]
-  * [OutputFiles Output statistics]
