--- a/wiki/OutputFiles.wiki
+++ b/wiki/OutputFiles.wiki
@@ -25,7 +25,7 @@ The value of the measure field affects how the other fields are interpreted. All
 
 === measures ===
 
-The measure indicates the meaning of statistics. It is specified by a short string identifier in the [XmlScenario scenario file] and by an integer code in the output files (a space optimization for when the results get imported into the results database). To avoid repetition and potential error of the available identifiers and their codes, please see the `SurveyMeasure` enumeration [http://code.google.com/p/openmalaria/source/browse/trunk/include/Survey.h here].
+The measure indicates the meaning of statistics. It is specified by a short string identifier in the [XmlScenario scenario file] and by an integer code in the output files (a space optimization for when the results get imported into the results database). See [XmlScenario#Survey_Options here] for a list of measures, or look directly in the [http://code.google.com/p/openmalaria/source/browse/trunk/include/Survey.h code] (`SurveyMeasure` enum) for an authoritative list of integer identifiers assigned to each measure.
 
 == vector.txt ==
 
