--- a/wiki/XmlScenario.wiki
+++ b/wiki/XmlScenario.wiki
@@ -21,3 +21,60 @@ It has the following attributes:
 == Demography element ==
 
 Describes the population size and age structure. Most of our scenarios use the same age-structure data from Ifakara, Tanzania. Adjusting the population size is useful, since it has a major impact on run-time and stochasticity of results (1000-100000 individuals are often used in experiments; testing scenarios often use less).
+
+== Monitoring element ==
+
+=== Survey Options ===
+
+This element controls which survey measures are [OutputFiles#measures output]. (Omitting an option has the same effect as listing it with value "false".)
+
+|| id || measure || description ||
+||  0 || nHost  ||  Total number of humans ||
+||  1 || nInfect  ||  number of infected hosts  ||
+|| 2 || nExpectd  ||  expected number of infected hosts ||
+|| 3 || nPatent  ||  number of patent hosts ||
+|| 4 || sumLogPyrogenThres  ||  Sum of the log of the pyrogen threshold ||
+|| 5 || sumlogDens  ||  Sum of the logarithm of the parasite density ||
+|| 6 || totalInfs  ||  Total infections ||
+|| 7 || nTransmit || Infectiousness of human population to mosquitoes. Number of hosts transmitting to mosquitoes (i.e. sum of proportion of mosquitoes that get infected). Single value, not per age-group. ||
+|| 8 || totalPatentInf  ||  Total patent infections ||
+|| 9 || contrib  ||  Contribution to immunity functions (not used) ||
+|| 10 || sumPyrogenThresh  ||  Sum of the pyrogenic threshold ||
+|| 11 || nTreatments1  ||  number of treatments (1st line) ||
+|| 12 || nTreatments2  ||  number of treatments (2nd line) ||
+|| 13 || nTreatments3  ||  number of treatments (inpatient) ||
+|| 14 || nUncomp  ||  number of episodes (uncomplicated) ||
+|| 15 || nSevere  ||  number of episodes (severe) ||
+|| 16 || nSeq  ||  cases with sequelae ||
+|| 17 || nHospitalDeaths  ||  deaths in hospital ||
+|| 18 || nIndDeaths  ||  number of deaths (indirect) ||
+|| 19 || nDirDeaths  ||  number of deaths (direct) ||
+|| 20 || nEPIVaccinations  ||  number of EPI vaccine doses given ||
+|| 21 || imr_summary || all cause infant mortality rate (returned as a single number over whole intervention period, instead of from a survey interval) ||
+|| 22 || nMassVaccinations  ||  number of Mass / Campaign vaccine doses given ||
+|| 23 || nHospitalRecovs  ||  recoveries in hospital ||
+|| 24 || nHospitalSeqs  ||  sequelae in hospital ||
+|| 25 || nIPTDoses  ||  number of IPT Doses ||
+|| 26 || annAvgK   || Annual Average Kappa. Calculated once a year as sum of human infectiousness divided by initial EIR summed over a year. Single value, not per age-group. ||
+|| 27 || nNMFever  ||  Number of episodes (non-malaria fever) ||
+|| 30 || innoculationsPerAgeGroup || The total number of innoculations per age group, summed over the reporting period. ||
+|| 28 || innoculationsPerDayOfYear  ||  Innoculations per human (all ages) per day of year, over the last year. ||
+|| 29 || kappaPerDayOfYear  ||  Kappa (human infectiousness) weighted by availability per day-of-year for the last year. ||
+
+Vector model parameters. All are point-time outputs, not averages. The Nv0, Nv, Ov and Sv outputs are per-species; the EIR outputs are single values.
+
+|| id || measure || description ||
+|| 31 || Vector_Nv0 || Mosquito emergence rate. ||
+|| 32 || Vector_Nv  ||  Mosquito population size ||
+|| 33 || Vector_Ov  ||  Number of infected mosquitoes ||
+|| 34 || Vector_Sv  ||  Number of infectious mosquitoes ||
+|| 35 || Vector_EIR_Input  ||  Input EIR (Expected EIR entered into scenario file) ||
+|| 36 || Vector_EIR_Simulated  ||  Simulated EIR (EIR output by the vector model) ||
+    
+EventScheduler reporting (additional to above).
+
+|| id || measure || description ||
+|| 39 || Clinical_RDTs  ||  Number of Rapid Diagnostic Tests used ||
+|| 40 || Clinical_DrugUsage  ||  Quantities of drugs used, per active ingredient abbreviation ||
+|| 41 || Clinical_FirstDayDeaths  ||  Direct death on first day of CM (before treatment takes effect) ||
+|| 42 || Clinical_HospitalFirstDayDeaths  ||  Direct death on first day of CM (before treatment takes effect); hospital only ||
